# pjatk-pjc-cw

./: CMakeLists.txt  README.md  Segment.h  c01.cpp  c02.cpp  c03.cpp  c04.cpp  c05.cpp  c06.cpp  c07.cpp  c08.cpp  c08.h  c09.cpp  c09.h  c10.cpp  cwiczenia.cpp  zadania.cpp
